--- a/app/src/main/res/layout/item_todo.xml
+++ b/app/src/main/res/layout/item_todo.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_gravity="center_vertical">
-
+    
     <TextView
         android:id="@+id/task_title"
         android:layout_width="wrap_content"
@@ -11,7 +11,9 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:text="Hello"
-        android:textSize="20sp" />
+        android:textSize="20sp"
+        android:textColor="#0EBB40"
+        android:layout_margin="20sp"/>
 
     <Button
         android:id="@+id/task_delete"
@@ -19,6 +21,8 @@
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
-        android:text="Done" />
+        android:text="Delete !"
+        android:layout_marginRight="15dp"
+        android:onClick="deleteTask"/>
 
 </RelativeLayout>
